welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value estSurBisuit
	while(!estSurBisuit()){
               ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
	while(!estSurBisuit()){
        ^