welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	while(!estSurBisuit()){
		avance(6);;
		if(vuBiscuit()){
			recule(6);
		}else{
			droite();avance();gauche();
		}
		
	}
}

def vuBiscuit():Boolean = {
	if(estSurBiscuit()){
		return true;
		}else{
		return false;
		}
}